# miniSQL

./: .gitignore  CMakeLists.txt  README.md
include/: BPTree.h  B_plus_tree.h  IndexManager.h  Node.h  exceptions.h
src/: B_plus_tree.cpp  index_test.cpp
